# iterative-dna-reconstruction

./: .gitignore  embedding_and_visualization.ipynb  gen-seq-and-emb.ipynb  guidebook.ipynb  metrics_utils.py  plan.md  plot_utils.py  preparation.py  pyproject.toml  sequence_generation.ipynb  sequence_generation.py  visualization.py
01_generate-seq-and-emb/: NTv3-test.ipynb  __init__.py  gen-promoter.ipynb  gen-seq-and-emb.ipynb  io_utils.py  model-info.ipynb  plan.md  preparation.py  sequence_generation.py
02_model-collapse-analysis/: embedding_and_visualization.ipynb  guidebook.ipynb  sequence_generation.ipynb  visualization.ipynb
03_dna-fm-to-alphagenome/: gene-annotation-viewer.ipynb  utils.py
03_dna-fm-to-alphagenome/regulator-to-alphagenome/: compare-TSS-upstream.ipynb  load-and-insert-promoter.ipynb
03_dna-fm-to-alphagenome/whole-gene-to-alphagenome/: alphagenome-test.ipynb  alphagenome-trial.ipynb  gene-selection.ipynb  visaulizing predictions.ipynb
dna-model-collapse/: README.md  all-in-one.ipynb  embedding_and_visualization.ipynb  gen-seq-and-emb.ipynb  sequence_generation.ipynb  visualization.ipynb
pseudogene-to-realgene/: embed_and_visualization.ipynb  gen_sequence.ipynb
results/DNABERT-2/: GAPDH.csv  GAPDHP1.csv  H4C1.csv  NORAD.csv  STAT3.csv  TP53.csv
results/NT-v2-500m/: GAPDH.csv  GAPDHP1.csv  H4C1.csv  NORAD.csv  STAT3.csv  TP53.csv
results/NT-v2-50m/: GAPDH.csv  GAPDHP1.csv  H4C1.csv  NORAD.csv  STAT3.csv  TP53.csv
results/embeddings/: embeddings_DNABERT-2__by__DNABERT-2.pkl  embeddings_NT-v2-500m__by__DNABERT-2.pkl
src/idr/: io.py  (+5 more)
(+167 files in other folders)
